# kubevent

./: Cargo.toml  Makefile  README.md
app/: Cargo.toml  build.rs
app/src/: config.rs  kubevent.rs  kubeventd.rs
app/src/brokers/: console.rs  mod.rs
app/src/cmds/: broker.rs  install.rs  mod.rs  rule.rs  rule_binding.rs  status.rs  uninstall.rs
app/src/controllers/: mod.rs  resource.rs
app/src/rules/: cloud_event.rs  mod.rs  type_.rs
app/src/server/: http.rs
app/src/watchers/: event.rs  mod.rs
common/: Cargo.toml
common/src/: crd.rs
manifests/: crd.yaml  sample.yaml
