[package]
name = "kubevent"
version = "0.1.0"
authors = ["David Ko <innobead@gmail.com>"]
edition = "2018"

[dependencies]
kubevent-common = { path = "./../common", version = "0.1.0" }
clap = "~3.0.0-beta"
log = "~0.4"
kube = { version = "~0", features = ["derive"] }
kube-runtime = "~0"
kube-derive = "~0"
k8s-openapi = { version = "~0.9", default-features = false, features = ["v1_18"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_yaml = "~0.8"
dirs = "~1.0"
env_logger = "~0.7"
tokio = { version = "~0.2", features = ["rt-core", "rt-threaded", "stream", "macros", "sync", "time"] }
snafu = "~0.1"
futures = "~0.3"
anyhow = "~1.0"
cloudevents-sdk = "~0.2"
cloudevents-sdk-rdkafka = "~0.2"
actix-web = "3.1.0"
actix-web-prom = "0.5"
actix-rt = "1.1.1"

[build-dependencies]
kubevent-common = { path = "./../common", version = "0.1.0" }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_yaml = "~0.8"
anyhow = "~1.0"

[[bin]]
name = "kubevent"
path = "src/kubevent.rs"

[[bin]]
name = "kubeventd"
path = "src/kubeventd.rs"
