[package]
name = "kubevent-common"
version = "0.1.0"
authors = ["David Ko <dko@suse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "~0", features = ["derive"] }
kube-derive = "~0"
k8s-openapi = { version = "~0.9", default-features = false, features = ["v1_18"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_yaml = "~0.8"
